# wavelet-ec

./: .gitignore  README.md  pyproject.toml  setup.py  version.py
conda/: environment.yml  environment_clean_spyd_cg.yml  meta.yaml
sample/FR-Gri_20220514/: demonstration.ipynb  example.ipynb
sample/FR-Gri_20220514/.ipynb_checkpoints/: demonstration-checkpoint.ipynb
waveletec/: __init__.py  handler.py  main.py  version.py
waveletec/_core/: __init__.py  addons.py  commons.py  corrections.py  handlers.py  partition.py  pipeline.py  read_data.py  wavelet_functions.py
waveletec/_extra/: __init__.py  eddypro_tools.py
waveletec/partitioning/: __init__.py  coimbra_et_al_2025.py  schoendorf.py  zahn_et_al_2022.py
