[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waveletec"
dynamic = ["version"]

description = "Wavelet-based Eddy Covariance"
readme = "README.md"
license = { text = "EUPL-1.2" }

authors = [
  { name = "Pedro Henrique Coimbra", email = "pedro-henrique.herig-coimbra@inrae.fr" },
  { name = "Daniel Schöndorf", email = "Daniel.Schoendorf@uni-bayreuth.de" }
]

requires-python = ">=3.8"

keywords = ["EC", "partitioning", "wavelet"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Other Environment",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "pandas>=2.0.0",
  "matplotlib>=3.1.0",
  "numpy>=1.24",
  "PyWavelets>=1.4.0",
  "scipy>=1.10.0",
  "scikit-learn",
  "PyYAML",
  "tqdm>=4.67.1",
]

[project.optional-dependencies]
cwt = ["pycwt"]
fcwt = ["pycwt", "fcwt"]

[project.scripts]
waveletEC-eddypro_run = "waveletec.main:eddypro_run"
waveletEC-run = "waveletec.main:bmmflux_eddypro_run"
waveletEC-partition = "waveletec.main:partition"
waveletEC-integrate = "waveletec.main:integrate"
waveletEC-exec = "waveletec.main:exec"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["sample*", "deprecated*"]

[tool.setuptools.dynamic]
version = { attr = "waveletec.version.__version__" }

